<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">If U</string>
    <string name="recover_photos">Recover Photos</string>
    <string name="recover_videos">Recover Videos</string>
    <string name="recover_other_files">Recover Files</string>
    <string name="recovered">Recovered</string>
    <string name="bytes">bytes</string>
    <string name="files">files</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="others">Other Files</string>
    <string name="settings">Settings</string>
    
    <!-- Language selection screen -->
    <string name="select_language">Select Language</string>
    <string name="choose_language">Choose Your Language</string>
    <string name="select_preferred_language">Select your preferred language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="next">Next</string>
    <string name="continue_button">Continue</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    
    <!-- Intro slides -->
    <string name="intro_image_description">Intro image</string>
    <string name="intro_title_1">Welcome to Easy Recovery</string>
    <string name="intro_desc_1">A simple and effective solution for recovering your deleted data on Android devices</string>
    <string name="intro_title_2">Recover Photos</string>
    <string name="intro_desc_2">Find and recover your precious deleted photos and memories</string>
    <string name="intro_title_3">Recover Videos</string>
    <string name="intro_desc_3">Never lose important moments with our powerful video recovery tool</string>
    <string name="intro_title_4">Recover Files</string>
    <string name="intro_desc_4">Easily recover documents, music files and other types of files</string>
    
    <!-- New strings for recovery features -->
    <string name="scan_button">Start Scan</string>
    <string name="scan_button_short">SCAN</string>
    <string name="recover_button">Recover</string>
    <string name="scanning_status">Scanning...</string>
    <string name="no_photos_found">No deleted photos found</string>
    <string name="photos_found">Found %d photos to recover</string>
    <string name="no_videos_found">No deleted videos found</string>
    <string name="videos_found">Found %d videos to recover</string>
    <string name="no_files_found">No deleted files found</string>
    <string name="files_found">%d files found</string>
    <string name="total_size">Total size</string>
    <string name="recovering_status">Recovering %d items...</string>
    <string name="recovery_success_gallery">Recovery successful. Videos have been saved to gallery.</string>
    <string name="recovery_failed">Recovery failed</string>
    <string name="permission_required">Storage permission required to continue</string>
    <string name="select_items">Please select items to recover</string>
    <string name="photo_recovery">Photo Recovery</string>
    <string name="tap_to_scan_photos">Tap to scan for photos</string>
    <string name="scan_complete">Scan complete</string>
    <string name="preview">Preview</string>
    <string name="view_results">View All</string>
    <string name="select_to_recover">Select items to recover</string>
    <string name="preview_thumbnail">Preview thumbnail</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="tep_duoc_tim_thay">Files found</string>
    <string name="kich_thuoc">Size</string>
    <string name="tap_to_scan_videos">Tap to scan for deleted videos</string>
    <string name="select_videos_to_recover">Select videos to recover</string>
    <string name="video_play_icon">Video play icon</string>
    <string name="tap_to_scan_files">Tap to scan for deleted files</string>
    <string name="select_files_to_recover">Select files to recover</string>
    <string name="file_icon">File icon</string>
    <string name="photo_recovery_desc">The app will scan device storage to find and recover deleted photos. This process may take a few minutes depending on storage capacity.</string>
    
    <!-- Settings screen strings -->
    <string name="back">Back</string>
    <string name="premium">Premium</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="premium_benefits">Remove ads and enjoy more benefits.</string>
    <string name="upgrade">Upgrade</string>
    <string name="language">Language</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    
    <!-- File access permission dialog -->
    <string name="storage_permission_title">Storage Permission</string>
    <string name="storage_permission_message">The app needs access to all files to scan and recover deleted data. Please allow access to continue.</string>
    <string name="storage_permission_button">Grant Permission</string>
    <string name="storage_permission_settings">Settings</string>
    <string name="storage_permission_denied">This app requires storage permission to work. Please grant permission in settings.</string>
    <string name="deleted_indicator">DELETED</string>
    <string name="trash_folder_indicator">Trash</string>
    <string name="recovery_message">This is a deleted photo. Tap to recover.</string>
    <string name="file_recovery_success">Recovery successful. Files have been saved to Documents folder.</string>
    <string name="recovery_failed_description">Some selected items could not be recovered. Please try again later.</string>
    <string name="recovery_in_progress">Recovery in progress, please wait...</string>
    <string name="recovery_progress_description">Photos are being recovered, please wait...</string>
    <string name="recovery_counting">%1$d/%2$d</string>
    <string name="view_recovered_button">View files</string>
    <string name="view_recovered_button_photo">View photos</string>


    <!-- Recovered files screen strings -->
    <string name="recovered_files_title">Recovered Files</string>
    <string name="recovered_photos">Recovered Photos</string>
    <string name="recovered_videos">Recovered Videos</string>
    <string name="recovered_other_files">Recovered Other Files</string>
    <string name="no_recovered_files">No files have been recovered yet</string>
    <string name="view">View</string>
    <string name="thumbnail_preview">File preview</string>
    <string name="open_file_error">Could not open this file</string>
    <string name="loading_thumbnail">Loading...</string>
    <string name="share">Share</string>
    <string name="share_title">Share via</string>
    <string name="share_success">Shared successfully</string>
    <string name="share_error">Could not share this file</string>
    <string name="selected_items_count">%d selected</string>
    <string name="select_all">Select all</string>
    <string name="no_items_selected">Please select at least one file</string>
    
    <!-- New strings for recovery features -->
    <string name="settings_app_language">App Language</string>
    <string name="settings_select_language">Select Language</string>
    
    <!-- Recovery strings -->
    <string name="recovering_files">Recovering files…</string>
    <string name="recovering_count">%1$d / %2$d</string>
    <string name="recovery_success">Recovery Success</string>
    <string name="recovery_success_description">Recovery successful. Photos have been saved to your gallery.</string>
    <string name="view_recovered_files">View Files</string>
    <string name="scanning_in_progress">Scanning in progress, please wait...</string>

    <!-- Ad related strings -->
    <string name="ad_loading">Loading ad...</string>
    <string name="ad_failed_to_load">Ad failed to load</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="watch_ad_to_continue">Watch ad to continue</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_rewarded_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_native_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="ad_section_title">Sponsored Content</string>
</resources>